data schema reworking (#436)
* code cleanup and added api endpoint for running individual page audits. It still needs testing

* audit improvements and separated page audit from domain audit for more heirarchy

* Upgraded system so that observations are general problems with description, ada_compliance, etc. and messages contain recommendations and element state