@@ -28,9 +28,8 @@ import com.qanairy.models.enums.AuditCategory;
 import com.qanairy.models.enums.AuditLevel;
 import com.qanairy.models.enums.AuditName;
 import com.qanairy.models.enums.AuditSubcategory;
+import com.qanairy.models.enums.ObservationType;
 import com.qanairy.models.enums.Priority;
-import com.qanairy.services.BrowserService;
-import com.qanairy.services.ElementStateService;
 import com.qanairy.services.ObservationService;
 import com.qanairy.services.PageStateService;
 import com.qanairy.utils.BrowserUtils;
@@ -43,20 +42,15 @@ public class LinksAudit implements IExecutablePageStateAudit {
 	@SuppressWarnings("unused")
 	private static Logger log = LoggerFactory.getLogger(LinksAudit.class);
 	
+	private static final int MAX_POINTS_EACH = 5;
+	
 	@Autowired
 	private ObservationService observation_service;
 	
 	@Autowired
 	private PageStateService page_state_service;
 	
-	@Autowired
-	private ElementStateService element_state_service;
 	
-	private List<ElementState> links_without_href_attribute =  new ArrayList<>();
-	private List<ElementState> links_without_href_value =  new ArrayList<>();
-	private List<ElementState> invalid_links = new ArrayList<>();
-	private List<ElementState> dead_links = new ArrayList<>();
-	private List<ElementState> non_labeled_links = new ArrayList<>();
 
 	public LinksAudit() {
 		//super(buildBestPractices(), getAdaDescription(), getAuditDescription(), AuditSubcategory.LINKS);
@@ -74,10 +68,18 @@ public class LinksAudit implements IExecutablePageStateAudit {
 	@Override
 	public Audit execute(PageState page_state) {
 		assert page_state != null;
+		
+		Set<UXIssueMessage> links_without_href_attribute =  new HashSet<>();
+		Set<UXIssueMessage> links_without_href_value =  new HashSet<>();
+		Set<UXIssueMessage> invalid_links = new HashSet<>();
+		Set<UXIssueMessage> dead_links = new HashSet<>();
+		Set<UXIssueMessage> non_labeled_links = new HashSet<>();
 	
 		//List<ElementState> link_elements = page_state_service.getLinkElementStates(user_id, page_state.getKey());
 		List<ElementState> link_elements = new ArrayList<>();
-		for(ElementState element : page_state_service.getElementStates(page_state.getKey())) {
+		List<ElementState> elements = page_state_service.getElementStates(page_state.getKey());
+		
+		for(ElementState element : elements) {
 			if(element.getName().equalsIgnoreCase("a")) {
 				link_elements.add(element);
 			}
@@ -88,82 +90,144 @@ public class LinksAudit implements IExecutablePageStateAudit {
 		List<Observation> observations = new ArrayList<>();
 		//score each link element
 		int score = 0;
-		for(ElementState link : link_elements) {
-			
+		for(ElementState link : link_elements) {			
 			Document jsoup_doc = Jsoup.parseBodyFragment(link.getOuterHtml(), page_state.getUrl());
 			Element element = jsoup_doc.getElementsByTag("a").first();
-		
-			//String href = link.getAttribute("href");
+
 			if( element.hasAttr("href") ) {
 				score++;
 			}
 			else {
-				links_without_href_attribute.add(link);
+				String recommendation = "Make sure links have a url set for the href value.";
+				ElementStateIssueMessage issue_message = new ElementStateIssueMessage(
+																Priority.HIGH,
+																recommendation, 
+																link);
+				links_without_href_attribute.add(issue_message);
 				continue;
 			}
-			String href = element.absUrl("href");
-
+			String href = element.attr("href");
+			
+			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+			log.warn("actual href value :: "+element.attr("href"));
+			log.warn("href as absolute url :: "+href);
 			//if href is a mailto link then give score full remaining value and continue
 			if(href.startsWith("mailto:")) {
-				score += 5;
+				score += 4;
 				continue;
 			}
 			
 			//does element have an href value?
 			if(href != null && !href.isEmpty()) {
-				
 				score++;
-				try {
-					URI uri = new URI(href);
-					if(!uri.isAbsolute()) {
-						href = page_state.getUrl() + href;
-					}
-				} catch (URISyntaxException e) {
-					e.printStackTrace();
-				}
 			}
 			else {
-				links_without_href_value.add(link);
+				String recommendation = "Make sure links have a url set for the href value.";
+				ElementStateIssueMessage issue_Message = new ElementStateIssueMessage(
+																Priority.HIGH, 
+																recommendation, 
+																link);
+				links_without_href_value.add(issue_Message);
 				continue;
 			}
 			
 			//is element link a valid url?
-			URL url_href = null;
 			try {
-				url_href = new URL(href);
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("href before check :: "+href);
+				
+				log.warn("does href start with relative indicator :: " + (href.startsWith("/") || href.startsWith("../")));
+				
+				URI uri = new URI(href);
+				log.warn("is href absolute? :: "+uri.isAbsolute());
+				if(!uri.isAbsolute()) {
+					URL page_url = new URL(BrowserUtils.sanitizeUrl(page_state.getUrl()));
+					log.warn("URI is not absolute :: "+href);
+					href.replaceAll("../", "");
+					if(href.startsWith("/") && href.length() > 1) {
+						log.warn("href starts with a '/'  :: "+href);
+						href = href.substring(1);
+					}
+					else if(href.strip().contentEquals("/")) {
+						href = "";
+					}
+					href = page_url.getHost() + "/" + href;
+					log.warn("new href 1 :: "+href);
+
+				}
+			
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				//if starts with / then append host
+			
 				score++;
 			} catch (MalformedURLException e) {
-				invalid_links.add(link);
+				String recommendation = "Make sure links point to a valid url.";
+				
+				ElementStateIssueMessage issue_message = new ElementStateIssueMessage(
+																Priority.HIGH, 
+																recommendation, 
+																link);
+				invalid_links.add(issue_message);
+				e.printStackTrace();
+			} catch (URISyntaxException e) {
+				String recommendation = "Make sure links point to a valid url.";
+				
+				ElementStateIssueMessage issue_message = new ElementStateIssueMessage(
+																Priority.HIGH, 
+																recommendation, 
+																link);
+				invalid_links.add(issue_message);
 				e.printStackTrace();
 			}
 			
 			//Does link have a valid URL? yes(1) / No(0)
 			try {
+				log.warn("href before building URL object :: "+href);
+
+				URL url_href = new URL(BrowserUtils.sanitizeUrl(href));
+
+				log.warn("url href object :: "+url_href.toString());
+
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				
 				if(BrowserUtils.doesUrlExist(url_href)) {
 					score++;
 				}
 				else {
-					dead_links.add(link);
+					String recommendaiotn = "Make sure links point to a valid url.";
+					
+					ElementStateIssueMessage issue_message = new ElementStateIssueMessage(
+																	Priority.HIGH,
+																	recommendaiotn,
+																	link);
+					dead_links.add(issue_message);
 				}
 			} catch (IOException e) {
-				dead_links.add(link);
+				String recommendaiotn = "Make sure links point to a valid url.";
+				
+				ElementStateIssueMessage issue_message = new ElementStateIssueMessage(
+																Priority.HIGH,
+																recommendaiotn,
+																link);
+				dead_links.add(issue_message);
 				e.printStackTrace();
 			}
 			
-			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
-			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
-			
 			//Does link contain a text label inside it
 			 if(!link.getAllText().isEmpty()) {
-				 log.warn("link has text.................");
 				 score++;
 			 }
 			 else {
 				 boolean element_includes_text = false;
-				 log.warn("link xpath :: " + link.getXpath());
-				 List<ElementState> element_states = element_state_service.getChildElements( page_state.getKey(), link.getXpath() );
-				 log.warn("# of child elements :: " + element_states.size());
-				 log.warn("link outerhtml  ::   " + link.getOuterHtml());
+				// List<ElementState> element_states = element_state_service.getChildElements( page_state.getKey(), link.getXpath() );
 				 //check each child element. if element is an image and does not include text then add link to non labeled links
 				 //for(ElementState child_element : element_states) {
 				//	 if("img".contentEquals(child_element.getName())) {
@@ -176,7 +240,6 @@ public class LinksAudit implements IExecutablePageStateAudit {
 							log.warn("image text list :: "+image_text_list.size());
 							
 							for(String text : image_text_list) {
-								log.warn("text value :: "+text);
 								if(text != null && !text.isEmpty()) {
 									element_includes_text = true;
 								}
@@ -193,15 +256,19 @@ public class LinksAudit implements IExecutablePageStateAudit {
 				 
 				 if(!element_includes_text) {
 					 log.warn("link doesn't have a text label");
+					String recommendation = "For best usability make sure links include text.";
+					
+					ElementStateIssueMessage issue_message = new ElementStateIssueMessage(
+																	Priority.HIGH,
+																	recommendation, 
+																	link);
 					 //does element use image as links?
-					 non_labeled_links.add(link);
+					 non_labeled_links.add(issue_message);
 				 }
 				 else {
 					 score++;
 				 }
 			}
-			 log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
-			 log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
 			 
 			//TODO : Does link have a hover styling? yes(1) / No(0)
 			
@@ -232,81 +299,66 @@ public class LinksAudit implements IExecutablePageStateAudit {
 		categories.add(AuditCategory.INFORMATION_ARCHITECTURE.getShortName());
 		
 		if(!links_without_href_attribute.isEmpty()) {
-			Set<String> recommendations = new HashSet<>();
-			recommendations.add("Make sure links have a url set for the href value.");
 			
-			ElementStateObservation observation = new ElementStateObservation(
-															links_without_href_attribute, 
-															"Links without an 'href' attribute present", 
-															why_it_matters, 
-															ada_compliance, 
-															Priority.HIGH,
-															recommendations, 
-															labels,
-															categories);
+			Observation observation = new Observation(
+												"Links without an 'href' attribute present",
+												why_it_matters,
+												ada_compliance,
+												ObservationType.ELEMENT,
+												labels,
+												categories,
+												links_without_href_attribute);
 			observations.add(observation_service.save(observation));
 		}
 		
 		if(!links_without_href_value.isEmpty()) {
-			Set<String> recommendations = new HashSet<>();
-			recommendations.add("Make sure links have a url set for the href value.");
 			
-			ElementStateObservation observation = new ElementStateObservation(
-															links_without_href_value, 
-															"Links without empty 'href' values", 
-															why_it_matters, 
-															ada_compliance, 
-															Priority.HIGH,
-															recommendations,
-															labels,
-															categories);
+			Observation observation = new Observation(
+												"Links with empty 'href' values", 
+												why_it_matters, 
+												ada_compliance,
+												ObservationType.ELEMENT,
+												labels,
+												categories,
+												links_without_href_value);
 			observations.add(observation_service.save(observation));
 		}
 		
 		if(!invalid_links.isEmpty()) {
-			Set<String> recommendations = new HashSet<>();
-			recommendations.add("Make sure links point to a valid url.");
 			
-			ElementStateObservation observation = new ElementStateObservation(
-															invalid_links, 
-															"Links with invalid addresses", 
-															why_it_matters, 
-															ada_compliance, 
-															Priority.HIGH,
-															recommendations,
-															labels,
-															categories);
+			Observation observation = new Observation(
+												"Links with invalid addresses", 
+												why_it_matters, 
+												ada_compliance,
+												ObservationType.ELEMENT,
+												labels,
+												categories,
+												invalid_links);
 			observations.add(observation_service.save(observation));
 		}
 		
 		if(!dead_links.isEmpty()) {
-			Set<String> recommendations = new HashSet<>();
-			recommendations.add("Make sure links point to a valid url.");
-			
-			ElementStateObservation observation = new ElementStateObservation(
-														dead_links, 
-														"Dead links", 
-														why_it_matters, 
-														ada_compliance, 
-														Priority.HIGH,
-														recommendations,
-														labels, null);
+			Observation observation = new Observation(
+												"Dead links", 
+												why_it_matters, 
+												ada_compliance, 
+												ObservationType.ELEMENT,
+												labels,
+												categories,
+												dead_links);
 			
 			observations.add(observation_service.save(observation));
 		}
 		
 		if(!non_labeled_links.isEmpty()) {
-			Set<String> recommendations = new HashSet<>();
-			recommendations.add("For best usability make sure links include text.");
-			
-			ElementStateObservation observation = new ElementStateObservation(
-															non_labeled_links, 
-															"Links without text", 
-															why_it_matters, 
-															ada_compliance, 
-															Priority.HIGH,
-															recommendations,
-															labels, null);
+			Observation observation = new Observation(
+												"Links without text",
+												why_it_matters,
+												ada_compliance,
+												ObservationType.ELEMENT,
+												labels,
+												categories,
+												non_labeled_links);
 			
 			observations.add(observation_service.save(observation));
 		}
@@ -320,7 +372,7 @@ public class LinksAudit implements IExecutablePageStateAudit {
 						 score,
 						 observations,
 						 AuditLevel.PAGE,
-						 link_elements.size()*5,
+						 link_elements.size() * MAX_POINTS_EACH,
 						 page_state.getUrl()); 
 		//the contstant 6 in this equation is the exact number of boolean checks for this audit
 	}
